--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
+
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Budzik Bikes | Bolton MTB Repairs & Door-to-Door Service</title>
-  <meta name="description" content="Budzik Bikes – MTB bike repairs in Bolton. Door-to-door pick up & delivery within 15 miles. WhatsApp 07493983824 | boltonbicycle32@gmail.com" />
-
-  <!-- Fonts (clean + modern, like a pro brand) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta name="description" content="Budzik Bikes – MTB bike repairs in Bolton. Door-to-door pick up & delivery within 15 miles. WhatsApp 07493983824 | boltonbicycle32@gmail.com" />  <!-- Fonts (clean + modern, like a pro brand) -->  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet">
-
-  <style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet">  <style>
     :root{
       --bg:#0e0f12;
       --panel:#14161b;
@@ -43,6 +39,24 @@
     }
 
     a{color:inherit; text-decoration:none}
+
+    /* subtle workshop photo texture in the background (no people) */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      z-index:-1;
+      pointer-events:none;
+      opacity:.14;
+      background-image:
+        url('https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=2400&q=70'),
+        url('https://images.unsplash.com/photo-1520699049698-acd2fccb8cc8?auto=format&fit=crop&w=2400&q=70');
+      background-size: cover, cover;
+      background-position: center, center;
+      background-repeat:no-repeat, no-repeat;
+      filter: grayscale(1) contrast(1.1) saturate(.6) blur(1px);
+      mix-blend-mode: soft-light;
+    }
     .wrap{max-width:var(--max); margin:0 auto; padding:22px}
 
     /* TOP BAR */
@@ -104,6 +118,16 @@
       font-size:14px;
       transition: transform .12s ease, filter .12s ease, background .12s ease, border-color .12s ease;
       user-select:none;
+      white-space:nowrap;
+    }
+
+    /* long text buttons (e.g., email address) */
+    .btn.wraptext{
+      white-space:normal;
+      line-height:1.2;
+      text-align:center;
+      word-break:break-word;
+      overflow-wrap:anywhere;
     }
     .btn:hover{border-color: rgba(255,255,255,.16); transform:translateY(-1px)}
 
@@ -127,7 +151,6 @@
       gap:18px;
       grid-template-columns: 1.15fr .85fr;
       align-items:stretch;
-      grid-auto-rows: 1fr;
     }
 
     .card{
@@ -202,7 +225,7 @@
 
     /* Right hero */
     .poster{
-      height:100%;
+      /* right hero card */
       background:
         radial-gradient(950px 520px at 70% 0%, rgba(255,106,0,.22), transparent 60%),
         linear-gradient(180deg, rgba(0,0,0,.30), rgba(0,0,0,.62));
@@ -286,6 +309,13 @@
       .brand-name{font-size:clamp(36px, 7vw, 48px)}
       h1{font-size:clamp(34px, 6.2vw, 46px)}
       .hero .card{min-height:unset}
+      /* remove forced tall blocks on mobile */
+      .poster{min-height:unset}
+    }
+      .hero{padding:28px 0 10px}
+      .brand-name{font-size:clamp(36px, 7vw, 48px)}
+      h1{font-size:clamp(34px, 6.2vw, 46px)}
+      .hero .card{min-height:unset}
       .poster{min-height:320px}
     }
 
@@ -304,8 +334,7 @@
       .btn.fb.big{font-size:20px; padding:22px 26px; min-height:92px}
       .card.pad{padding:18px}
     }
-  </style>
-</head>
+  </style></head>
 <body>
   <div class="topbar">
     <div class="wrap">
@@ -315,173 +344,177 @@
             <span class="brand-name">BUDZIK BIKES</span>
             <small>MTB sales &amp; service • Quality used bikes • Bolton + 15 miles</small>
           </div>
-        </div>
+        </div><div class="links">
+      <a href="#services">Services</a>
+      <a href="#stock">Bikes for sale</a>
+      <a href="#contact">Contact</a>
+    </div>
 
-        <div class="links">
-          <a href="#services">Services</a>
-          <a href="#stock">Bikes for sale</a>
-          <a href="#contact">Contact</a>
-        </div>
-
-        <div class="cta">
-          <a class="btn fb" href="https://www.facebook.com/BudzikBikes" target="_blank" rel="noopener" title="Facebook">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24H12.82v-9.294H9.692V11.01h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.312h3.587l-.467 3.696h-3.12V24h6.116C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/></svg>
-          </a>
-          <a class="btn yt" href="https://www.youtube.com/@AdamBudzik84" target="_blank" rel="noopener" title="YouTube">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M23.498 6.186a2.994 2.994 0 00-2.108-2.118C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.39.568A2.994 2.994 0 00.502 6.186 31.03 31.03 0 000 12a31.03 31.03 0 00.502 5.814 2.994 2.994 0 002.108 2.118C4.495 20.5 12 20.5 12 20.5s7.505 0 9.39-.568a2.994 2.994 0 002.108-2.118A31.03 31.03 0 0024 12a31.03 31.03 0 00-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-          </a>
-          <a class="btn" href="mailto:boltonbicycle32@gmail.com">Email</a>
-          <a class="btn wa" href="https://wa.me/447493983824" target="_blank" rel="noopener">WhatsApp</a>
-        </div>
-      </div>
+    <div class="cta">
+      <a class="btn fb" href="https://www.facebook.com/BudzikBikes" target="_blank" rel="noopener" title="Facebook">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 24 1.326 24H12.82v-9.294H9.692V11.01h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.763v2.312h3.587l-.467 3.696h-3.12V24h6.116C23.403 24 24 23.403 24 22.674V1.326C24 .597 23.403 0 22.675 0z"/></svg>
+      </a>
+      <a class="btn yt" href="https://www.youtube.com/@AdamBudzik84" target="_blank" rel="noopener" title="YouTube">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M23.498 6.186a2.994 2.994 0 00-2.108-2.118C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.39.568A2.994 2.994 0 00.502 6.186 31.03 31.03 0 000 12a31.03 31.03 0 00.502 5.814 2.994 2.994 0 002.108 2.118C4.495 20.5 12 20.5 12 20.5s7.505 0 9.39-.568a2.994 2.994 0 002.108-2.118A31.03 31.03 0 0024 12a31.03 31.03 0 00-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+      </a>
+      <a class="btn" href="mailto:boltonbicycle32@gmail.com">Email</a>
+      <a class="btn wa" href="https://wa.me/447493983824" target="_blank" rel="noopener">WhatsApp</a>
     </div>
   </div>
+</div>
 
-  <div class="wrap">
+  </div>  <div class="wrap">
     <header class="hero">
       <div class="grid">
         <div class="card pad">
           <span class="kicker">MTB sales &amp; service • Quality used bikes • Collection &amp; delivery</span>
           <h1>Ride ready, hassle free.</h1>
           <p class="lead">Professional bike repair &amp; maintenance in <b>Bolton</b> with door-to-door pick up &amp; delivery within <b>15 miles</b>. Quick, honest service and clear pricing.</p>
-          <p class="lead">Want to restore your bike to <b>like‑new condition</b> or prepare it for <b>sale</b>? We’ll take care of everything for you.</p>
-
-          <div class="hero-actions">
-            <a class="btn primary" href="#services">See services &amp; prices</a>
-            <a class="btn" href="#stock">Bikes for sale</a>
-            <a class="btn" href="#contact">Get a quote</a>
-          </div>
-
-          <div class="stats">
-            <div class="stat"><b>Bolton</b><span>local service</span></div>
-            <div class="stat"><b>15 miles</b><span>pick up &amp; delivery</span></div>
-            <div class="stat"><b>Fast turnaround</b><span>when possible</span></div>
-          </div>
-
-          <div class="sep"></div>
-          <div class="mini">Tip: You can paste photos and details of your bike on WhatsApp — I’ll reply with an estimate.</div>
-        </div>
-
-        <div class="card poster">
-          <div class="inner">
-            <div class="badge"><i></i> Door to door service</div>
-            <h2>Pick up &amp; deliver to your home</h2>
-            <p>No car? No problem. I can collect your bike, service it, and bring it back — within Bolton + 15 mile radius.</p>
-
-            <div class="contact-box">
-              <div class="contact-row"><span>WhatsApp</span><b>07493983824</b></div>
-              <div class="contact-row"><span>Email</span><b>boltonbicycle32@gmail.com</b></div>
-              <div class="contact-row"><span>Area</span><b>Bolton + 15 miles</b></div>
-            </div>
-
-            <div class="sep"></div>
-            <div class="mini">Opening hours can be flexible — message first and we’ll arrange a time.</div>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <section id="services">
-      <div class="section-head">
-        <div>
-          <h3>Services &amp; prices</h3>
-          <p>Clear prices. Parts not included unless stated.</p>
-        </div>
+          <p class="lead">Want to restore your bike to <b>like‑new condition</b> or prepare it for <b>sale</b>? We’ll take care of everything for you.</p><div class="hero-actions">
+        <a class="btn primary" href="#services">See services &amp; prices</a>
+        <a class="btn" href="#stock">Bikes for sale</a>
+        <a class="btn" href="#contact">Get a quote</a>
       </div>
 
-      <div class="services">
-        <div class="service hot">
-          <b>Tubeless Setup <em>£20 / wheel</em></b>
-          <p>Includes valves, sealant and rim tape.</p>
-        </div>
-        <div class="service hot">
-          <b>Brake Bleed <em>£15 one / £30 both</em></b>
-          <p>Mineral oil / DOT depending on your brakes.</p>
-        </div>
-        <div class="service">
-          <b>Full Bike Tune‑Up <em>£60–£80</em></b>
-          <p>Full check, adjust gears &amp; brakes, safety inspection.</p>
-        </div>
-        <div class="service">
-          <b>Wheel Truing <em>£15</em></b>
-          <p>Truing + quick tension check.</p>
-        </div>
-        <div class="service">
-          <b>Gear Indexing <em>£10</em></b>
-          <p>Shifting setup for smooth changes.</p>
-        </div>
-        <div class="service">
-          <b>Brake Adjustment <em>£10–£20</em></b>
-          <p>Align caliper, set pads/lever feel.</p>
-        </div>
-        <div class="service">
-          <b>Tyre Fitting <em>£10</em></b>
-          <p>Tyre/tube install (or tyre swap).</p>
-        </div>
-        <div class="service">
-          <b>Bike Wash &amp; Detailing <em>£20–£40</em></b>
-          <p>Safe wash, degrease, clean and protect.</p>
-        </div>
-        <div class="service">
-          <b>Other work <em>Ask</em></b>
-          <p>Bearings, drivetrain, cables, upgrades, diagnostics.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="stock">
-      <div class="section-head">
-        <div>
-          <h3>Bikes for sale</h3>
-          <p>All current bikes are posted on Facebook with full photos, details and updates.</p>
-        </div>
+      <div class="stats">
+        <div class="stat"><b>Bolton</b><span>local service</span></div>
+        <div class="stat"><b>15 miles</b><span>pick up &amp; delivery</span></div>
+        <div class="stat"><b>Fast turnaround</b><span>when possible</span></div>
       </div>
 
-      <div class="card pad" style="display:flex; align-items:center; justify-content:center;">
-        <div style="text-align:center; max-width:760px; width:100%;">
-          <div class="kicker" style="justify-content:center; margin:0 auto 14px;">Bikes posted with full photos & updates</div>
-          <h3 style="margin:0 0 6px; font-size:24px;">See current bikes on Facebook</h3>
-          <p class="lead" style="margin:0 0 16px;">Tap the button below — you’ll always see the newest bikes first.</p>
-          <a class="btn fb big" href="https://www.facebook.com/BudzikBikes/" rel="noopener">View bikes for sale</a>
-          <p class="mini" style="margin:12px 0 0;">If you can’t find what you need, message me on WhatsApp and I’ll help you find the right bike.</p>
-        </div>
-      </div>
-    </section>
+      <div class="sep"></div>
+      <div class="mini">Tip: You can paste photos and details of your bike on WhatsApp — I’ll reply with an estimate.</div>
+    </div>
 
-    <section id="contact">
-      <div class="section-head">
-        <div>
-          <h3>Contact</h3>
-          <p>Send photos + short description and I’ll reply with an estimate.</p>
-        </div>
-      </div>
+    <div class="card poster">
+      <div class="inner">
+        <div class="badge"><i></i> Door to door service</div>
+        <h2>Pick up &amp; deliver to your home</h2>
+        <p>No car? No problem. I can collect your bike, service it, and bring it back — within Bolton + 15 mile radius.</p>
 
-      <div class="card pad">
-        <div class="services" style="grid-template-columns:repeat(2, minmax(0, 1fr));">
-          <div class="service">
-            <b>WhatsApp</b>
-            <p style="margin-top:10px;"><a class="btn primary" href="https://wa.me/447493983824" target="_blank" rel="noopener">Message 07493983824</a></p>
-          </div>
-          <div class="service">
-            <b>Email</b>
-            <p style="margin-top:10px;"><a class="btn" href="mailto:boltonbicycle32@gmail.com">boltonbicycle32@gmail.com</a></p>
-          </div>
+        <div class="contact-box">
+          <div class="contact-row"><span>WhatsApp</span><b>07493983824</b></div>
+          <div class="contact-row"><span>Email</span><b>boltonbicycle32@gmail.com</b></div>
+          <div class="contact-row"><span>Area</span><b>Bolton + 15 miles</b></div>
         </div>
+
         <div class="sep"></div>
-        <div class="mini">© <span id="y"></span> Budzik Bikes • Bolton, UK</div>
+        <div class="mini">Opening hours can be flexible — message first and we’ll arrange a time.</div>
       </div>
-    </section>
+    </div>
+  </div>
+</header>
 
-    <footer>
-      <div class="foot">
-        <div class="mini">Built as a simple one‑page site. Next step (optional): add a photo gallery, reviews, map, and a simple “Get a quote” form.</div>
-        <div class="mini">Bolton • 15 mile radius • Door‑to‑door</div>
-      </div>
-    </footer>
+<section id="services">
+  <div class="section-head">
+    <div>
+      <h3>Services &amp; prices</h3>
+      <p>Clear prices. Parts not included unless stated.</p>
+    </div>
   </div>
 
-  <script>
+  <div class="services">
+    <div class="service hot">
+      <b>Tubeless Setup <em>£20 / wheel</em></b>
+      <p>Includes valves, sealant and rim tape.</p>
+    </div>
+    <div class="service hot">
+      <b>Brake Bleed <em>£15 one / £30 both</em></b>
+      <p>Mineral oil / DOT depending on your brakes.</p>
+    </div>
+    <div class="service">
+      <b>Full Bike Tune‑Up <em>£60–£80</em></b>
+      <p>Full check, adjust gears &amp; brakes, safety inspection.</p>
+    </div>
+    <div class="service">
+      <b>Wheel Truing <em>£15</em></b>
+      <p>Truing + quick tension check.</p>
+    </div>
+    <div class="service">
+      <b>Gear Indexing <em>£10</em></b>
+      <p>Shifting setup for smooth changes.</p>
+    </div>
+    <div class="service">
+      <b>Brake Adjustment <em>£10–£20</em></b>
+      <p>Align caliper, set pads/lever feel.</p>
+    </div>
+    <div class="service">
+      <b>Tyre Fitting <em>£10</em></b>
+      <p>Tyre/tube install (or tyre swap).</p>
+    </div>
+    <div class="service">
+      <b>Bike Wash &amp; Detailing <em>£20–£40</em></b>
+      <p>Safe wash, degrease, clean and protect.</p>
+    </div>
+    <div class="service">
+      <b>Other work <em>Ask</em></b>
+      <p>Bearings, drivetrain, cables, upgrades, diagnostics.</p>
+    </div>
+  </div>
+</section>
+
+<section id="stock">
+  <div class="section-head">
+    <div>
+      <h3>Bikes for sale</h3>
+      <p>All current bikes are posted on Facebook with full photos, details and updates.</p>
+    </div>
+  </div>
+
+  <div class="card pad" style="display:flex; align-items:center; justify-content:center;">
+    <div style="text-align:center; max-width:760px; width:100%;">
+      <div class="kicker" style="justify-content:center; margin:0 auto 14px;">Bikes posted with full photos & updates</div>
+      <h3 style="margin:0 0 6px; font-size:24px;">See current bikes on Facebook</h3>
+      <p class="lead" style="margin:0 0 16px;">Tap the button below — you’ll always see the newest bikes first.</p>
+      <a class="btn fb big" href="https://www.facebook.com/BudzikBikes/" rel="noopener">View bikes for sale</a>
+      <p class="mini" style="margin:12px 0 0;">If you can’t find what you need, message me on WhatsApp and I’ll help you find the right bike.</p>
+    </div>
+  </div>
+</section>
+
+<section id="contact">
+  <div class="section-head">
+    <div>
+      <h3>Contact</h3>
+      <p>Send photos + short description and I’ll reply with an estimate.</p>
+    </div>
+  </div>
+
+  <div class="card pad">
+    <div class="services" style="grid-template-columns:repeat(2, minmax(0, 1fr));">
+      <div class="service">
+        <b>WhatsApp</b>
+        <p style="margin-top:10px;"><a class="btn primary" style="width:100%;" href="https://wa.me/447493983824" target="_blank" rel="noopener">Message 07493983824</a></p>
+      </div>
+      <div class="service">
+        <b>Email</b>
+        <p style="margin-top:10px;"><a class="btn wraptext" style="width:100%;" href="mailto:boltonbicycle32@gmail.com">boltonbicycle32@gmail.com</a></p>
+      </div>
+    </div>
+    <div class="sep"></div>
+    <div class="mini">© <span id="y"></span> Budzik Bikes • Bolton, UK</div>
+  </div>
+</section>
+
+<footer>
+  <div class="card pad" style="margin-top:24px;">
+    <div style="text-align:center;">
+      <div class="kicker" style="justify-content:center; margin:0 auto 12px;">Contact • Quick response</div>
+      <h3 style="font-size:28px; margin:0 0 10px;">Call, WhatsApp or Email</h3>
+      <p class="lead" style="margin-bottom:18px;">Fast reply – send photos of your bike and I’ll get back to you.</p>
+
+      <div style="display:flex; gap:14px; justify-content:center; flex-wrap:wrap;">
+        <a class="btn wa" style="font-size:22px; padding:20px 28px;" href="https://wa.me/447493983824" target="_blank" rel="noopener">📱 0749 398 3824</a>
+        <a class="btn primary" style="font-size:20px; padding:20px 26px;" href="mailto:boltonbicycle32@gmail.com">✉️ boltonbicycle32@gmail.com</a>
+      </div>
+
+      <div class="sep"></div>
+      <div class="mini">© <span id="y"></span> Budzik Bikes • Bolton • 15 mile radius • Door‑to‑door service</div>
+    </div>
+  </div>
+</footer>
+
+  </div>  <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
-</body>
+  </script></body>
 </html>
