--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Budzik Bikes | Bolton MTB Sales & Service</title>
   <meta name="description" content="Budzik Bikes — MTB sales & service in Bolton. Door-to-door pick up & delivery within 15 miles. WhatsApp 07493983824 | boltonbicycle32@gmail.com" />
+  <link rel="canonical" href="https://www.budzikbikes.co.uk/" />
 
   <!-- Fonts: strong, “cennik vibe” but still clean -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
