--- a/index.html
+++ b/index.html
@@ -595,11 +595,17 @@
   </div>
 
   <div class="bike-card">
-    <img src="assets/bikes/20260123_143324.jpg" alt="Whyte Secta S mountain bike for sale Bolton">
+    <img src="assets/bikes/20260126_141436.jpg" alt="Whyte Secta S mountain bike for sale Bolton">
     <h3>Whyte Secta S</h3>
     <p>MTB • Size M • Ready to ride</p>
     <p class="price">£699</p>
   </div>
+      
+      <div class="bike-card">
+    <img src="assets/bikes/20260123_143324.jpg" alt="Trek Marlin 6 2026 MTB for sale Bolton">
+    <h3>Trek Marlin 6 </h3>
+    <p>Hardtail MTB • Size m •Brand New</p>
+    <p class="price">£599</p>
 </section>
 
 
