--- a/index.html
+++ b/index.html
@@ -600,13 +600,14 @@
     <h3>Whyte Secta S</h3>
     <p>MTB • Size M • Ready to ride</p>
     <p class="price">£699</p>
+    <a class="btn wa" href="https://wa.me/447493983824" target="_blank" rel="noopener">WhatsApp</a>
   </div>
       
       <div class="bike-card">
     <img src="assets/bikes/20260123_143324.jpg" alt="Trek Marlin 6 2026 MTB for sale Bolton">
     <h3>Trek Marlin 6 </h3>
     <p>Hardtail MTB • Size m •Brand New</p>
-    <p class="price">£599</p>
+    <p class="price">£599</p><a class="btn wa" href="https://wa.me/447493983824" target="_blank" rel="noopener">WhatsApp</a>
 </section>
 
 
